resources/style/style.css
html, body {
    margin: 0;
    height: 100%;
    background-color: #202020;
    color: #f0f0f0;
    font-family: Verdana;
    font-size: 0.9em;
}

#left, #right {
    height: 100%;
}

#left {
    width: 500px;
    float: left;
    border-right: thick solid #666666;
}

#right {
    overflow: auto;
}

#filetree {
    width: 100%;
    height: 100%;
    overflow: auto;
    background-color: #333333;
}

#filetree ul {
    padding: 0;
}

#filetree button {
    display: block;
    margin: 0 auto;
}

#welcome {
    display: flex;
    height: 100%;
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 1.6em;
    font-style: italic;
    font-family: serif;
}

#contentview {
    height: 100%;
    padding: 0;
    border: none;
    background-color: transparent;
}

#contentview li.ui-tabs-tab.right {
    float: right;
}

#contentview .selectionDetails {
    list-style: none;
    width: 100%;
    height: 102px;
    padding: 0;
}

#contentview .selectionDetails b {
    display: inline-block;
    width: 175px;
}

#content {
    height: calc(100% - 100px);
}

#content .preview, #content .textView {
    display: flex;
    justify-content: center;
    align-items: center;
    height: calc(100% - 102px);
    background-color: #666666;
    overflow: auto;
}

#contentview .CodeMirror {
    height: 100%;
    width: 100%;
}

#debug tr:nth-child(even),
#contentview .selectionDetails li:nth-child(even) {
    background-color: #292929;
}

#debug tr:hover,
#contentview .selectionDetails li:hover {
    background-color: #333333;
}

#debug table {
    width: 100%;
}

#debug td {
    text-align: right;
    vertical-align: top;
}

#debug td.text {
    text-align: left;
}

#debug ol {
    margin: 0;
}

#debug ol > li {
    float: left;
    width: 110px;
    margin-right: 58px;
}

#debug ul > li {
    clear: left;
}

.ui-progressbar {
    position: relative;
}

.ui-progressbar > .progresslabel {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
}

.ui-progressbar-value {
    background-color: #0972a5;
}

#dialog .options > .line {
    display: flex;
    height: 30px;
}

#dialog .options label {
    width: 100px;
    line-height: 30px;
}

#dialog .options #selectExtractTarget {
    width: 80px;
    float: right;
    text-align: center;
    padding: 0;
}

#dialog .options #extractTarget {
    padding: 0 5px;
    width: 246px;
    background-color: #333;
    border: thin solid #444;
    color: #fff;
    cursor: pointer;
}

#dialog .options .checkboxLabel {
    width: 358px;
    line-height: 30px;
}

#dialog .options .checkboxButton {
    width: 80px;
    line-height: inherit;
}

#dialog .options input {
    width: 334px;
}

#dialog .options #extractTargetSource {
    display: none;
}

#dialog .page1 .filetree {
    height: 200px;
    width: 443px;
    overflow-y: auto;
}

#dialog .page1 fieldset {
    padding: 5px 10px 10px 10px;
    margin-bottom: 5px;
}

#dialog .page2 .log {
    width: calc(100% - 6px);
    height: 200px;
    white-space: pre;
    resize: none;
    background-color: #333;
    border: thin solid #444;
    color: #fff;
}

.ui-dialog-buttonpane .status {
    overflow: hidden;
    text-overflow: ellipsis;
    white-space: nowrap;
    width: 80%;
    margin: 14px 0 0 10px;
}

.ui-dialog-buttonpane .error {
    margin: 14px 0 0 10px;
    color: #d02f2f;
    font-weight: bold;
}

.patreonbutton img {
    width: 20px;
    height: 20px;
}
.patreonbutton a {
    width: 32px;
    height: 32px;
    background-color: #666666;
    padding: 0 !important;
    display: flex;
    justify-content: center;
    align-items: center;
}

#patrons button {
    background: transparent;
    border: none;
    cursor: pointer;
    width: 200px;
    height: 47px;
    padding: 0;
    position: sticky;
    bottom: 20px;
    margin: 0 auto;
}

#patrons button img {
    width: 200px;
    height: 47px;
}

#patrons {
    height: calc(100% - 100px);
    overflow: auto;
    text-align: center;
}

#patrons h1 {
    text-align: center;
}

#patrons h3 {
    text-align: center;
}

#patrons div {
    margin-bottom: 10px;
    padding: 10px;
}

#patrons span {
    display: inline-block;
    margin: 5px 10px;
}

#patrons span.emph0 {
    font-size: 1em;
}

#patrons span.emph2 {
    font-size: 2em;
}

#patrons span.emph1 {
    font-size: 1.5em;
}

